added the second ad the thred blog

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
   <div>
-    <h1>my simple website</h1>
+    <h1>my first blog</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quia molestias nobis nesciunt pariatur earum nisi veritatis sed provident perferendis. Ducimus vero obcaecati recusandae pariatur incidunt doloremque similique aperiam doloribus atque soluta, voluptas cum aspernatur modi animi voluptatem. Natus voluptates placeat ad doloremque debitis odit obcaecati provident ab ipsa enim?</p>
+  </div>
+  <div>
+    <h1>my secon blog</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quia molestias nobis nesciunt pariatur earum nisi veritatis sed provident perferendis. Ducimus vero obcaecati recusandae pariatur incidunt doloremque similique aperiam doloribus atque soluta, voluptas cum aspernatur modi animi voluptatem. Natus voluptates placeat ad doloremque debitis odit obcaecati provident ab ipsa enim?</p>
+  </div>
+  
+  <div>
+    <h1>my thrid blog</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quia molestias nobis nesciunt pariatur earum nisi veritatis sed provident perferendis. Ducimus vero obcaecati recusandae pariatur incidunt doloremque similique aperiam doloribus atque soluta, voluptas cum aspernatur modi animi voluptatem. Natus voluptates placeat ad doloremque debitis odit obcaecati provident ab ipsa enim?</p>
   </div>
 </body>
