added a list push code

--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
     <h1>my thrid blog</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quia molestias nobis nesciunt pariatur earum nisi veritatis sed provident perferendis. Ducimus vero obcaecati recusandae pariatur incidunt doloremque similique aperiam doloribus atque soluta, voluptas cum aspernatur modi animi voluptatem. Natus voluptates placeat ad doloremque debitis odit obcaecati provident ab ipsa enim?</p>
   </div>
+  <div>
+    <h1>you to the push intarna code</h1>
+    <ul>
+        <li>git add</li>
+        <li>git commet-"ad a meningful message"</li>
+        <li>git push</li>
+    </ul>
+  </div>
 </body>
 </html>
