added kim with a demo

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
         <li>git push</li>
     </ul>
   </div>
+  <div>
+<h3>kim kim kay evry single day</h3>
+<img src="images/16.jpg" alt="">
+  </div>
 </body>
 </html>
